Minor changes added. Ready Work section

--- a/app/index.html
+++ b/app/index.html
@@ -148,7 +148,7 @@
                     <div class="section-finance__box-card">
                       <div class="card-merit">
                         <div class="card-merit__box-content-top">
-                          <figure class="card-merit__figure"><img class="card-merit__picture" src="../img/question.png" alt="question"></figure>
+                          <figure class="card-merit__figure"><img class="card-merit__picture" src="img/question.png" alt="question"></figure>
                         </div>
                         <div class="card-merit__box-content-bottom">
                           <p class="card-merit__txt">За последний год работы мы уже помогли<span class="card-merit__txt card-merit__txt_bold"> более, чем 150 клиентам</span> выйти из трудной ситуации!</p>
@@ -182,7 +182,7 @@
                 </div>
               </div>
               <div class="section-finance__box-figure">
-                <figure class="section-finance__figure wow slideInLeft" data-wow-offset="200"><img class="section-finance__picture" src="../img/pig.png" alt="pig"></figure>
+                <figure class="section-finance__figure wow slideInLeft" data-wow-offset="200"><img class="section-finance__picture" src="img/pig.png" alt="pig"></figure>
               </div>
             </div>
           </div>
@@ -198,7 +198,7 @@
                   <div class="grid__item width-1-1 width-1-2-lg">
                     <div class="card-info card-info_inner-position_right card-info_inner-position_special-align">
                       <div class="card-info__box-content-top">
-                        <figure class="card-info__figure wow rotateIn" data-wow-offset="10"><img class="card-info__picture" src="../img/portrait.png" alt="portrait"></figure>
+                        <figure class="card-info__figure wow rotateIn" data-wow-offset="10"><img class="card-info__picture" src="img/portrait.png" alt="portrait"></figure>
                       </div>
                       <div class="card-info__box-content-bottom">
                         <p class="card-info__txt">С вами работает&nbsp;<span class="card-info__txt card-info__txt_bold">персональный менеджер по банкротству,&nbsp;</span>который постоянно в курсе этапов вашего дела.</p>
@@ -208,7 +208,7 @@
                   <div class="grid__item width-1-1 width-1-2-lg">
                     <div class="card-info card-info_inner-position_left card-info_inner-position_top">
                       <div class="card-info__box-content-top">
-                        <figure class="card-info__figure card-info__figure_outer-position_bottom wow rotateIn" data-wow-offset="10"><img class="card-info__picture" src="../img/packs.png" alt="packs"></figure>
+                        <figure class="card-info__figure card-info__figure_outer-position_bottom wow rotateIn" data-wow-offset="10"><img class="card-info__picture" src="img/packs.png" alt="packs"></figure>
                       </div>
                       <div class="card-info__box-content-bottom card-info__box-content-bottom_inner-position_top card-info__box-content-bottom_outer-position_top">
                         <p class="card-info__txt">Соберем весь пакет документов.&nbsp;<span class="card-info__txt card-info__txt_bold card-info__txt_md-inner-position">С нами вы не тратите время и&nbsp;нервы!</span></p>
@@ -218,7 +218,7 @@
                   <div class="grid__item width-1-1 width-1-2-lg">
                     <div class="card-info card-info_inner-position_right card-info_outer-position_top-deep">
                       <div class="card-info__box-content-top">
-                        <figure class="card-info__figure wow rotateIn" data-wow-offset="10"><img class="card-info__picture" src="../img/docs.png" alt="docs"></figure>
+                        <figure class="card-info__figure wow rotateIn" data-wow-offset="10"><img class="card-info__picture" src="img/docs.png" alt="docs"></figure>
                       </div>
                       <div class="card-info__box-content-bottom card-info__box-content-bottom_outer-position_top">
                         <p class="card-info__txt">Все гарантии мы&nbsp;<span class="card-info__txt card-info__txt_bold card-info__txt_inner-position">прописываем в&nbsp;договоре!</span></p>
@@ -228,7 +228,7 @@
                   <div class="grid__item width-1-1 width-1-2-lg">
                     <div class="card-info card-info_inner-position_left card-info_outer-position_top-small">
                       <div class="card-info__box-content-top">
-                        <figure class="card-info__figure card-info__figure_outer-position_bottom card-info__figure_inner-position_left wow rotateIn" data-wow-offset="5"><img class="card-info__picture" src="../img/people.png" alt="people"></figure>
+                        <figure class="card-info__figure card-info__figure_outer-position_bottom card-info__figure_inner-position_left wow rotateIn" data-wow-offset="5"><img class="card-info__picture" src="img/people.png" alt="people"></figure>
                       </div>
                       <div class="card-info__box-content-bottom card-info__box-content-bottom_inner-position_top card-info__box-content-bottom_outer-position_left">
                         <p class="card-info__txt">3 опытных финансовых управляющих&nbsp;в&nbsp;команде!&nbsp;<span class="card-info__txt card-info__txt_bold card-info__txt_xl-inner-position">Ваше дело в надежных руках!</span></p>
@@ -268,7 +268,7 @@
                 </form>
               </div>
               <div class="section-cost__box-figure wow slideInRight" data-wow-offset="250">
-                <figure class="section-cost__figure"><img class="section-cost__picture" src="../img/femida.png" alt="femida"></figure>
+                <figure class="section-cost__figure"><img class="section-cost__picture" src="img/femida.png" alt="femida"></figure>
               </div>
             </div>
           </div>
@@ -283,7 +283,7 @@
                 <div class="grid__item width-1-1 width-1-3-lg">
                   <div class="card-feature">
                     <div class="card-feature__box-content-top">
-                      <figure class="card-feature__figure"><img class="card-feature__picture" src="../img/calendar.png" alt="calendar"></figure>
+                      <figure class="card-feature__figure"><img class="card-feature__picture" src="img/calendar.png" alt="calendar"></figure>
                     </div>
                     <div class="card-feature__box-content-bottom card-feature__box-content-bottom_inner-position_left-small">
                       <p class="card-feature__title">Рассрочка до 12 месяцев</p>
@@ -295,7 +295,7 @@
                 <div class="grid__item width-1-1 width-1-3-lg">
                   <div class="card-feature">
                     <div class="card-feature__box-content-top card-feature__box-content-top_outer-position_left-small">
-                      <figure class="card-feature__figure"><img class="card-feature__picture" src="../img/plane.png" alt="plane"></figure>
+                      <figure class="card-feature__figure"><img class="card-feature__picture" src="img/plane.png" alt="plane"></figure>
                     </div>
                     <div class="card-feature__box-content-bottom card-feature__box-content-bottom_outer-position_left-small">
                       <p class="card-feature__title">Работаем в выходные</p>
@@ -307,7 +307,7 @@
                 <div class="grid__item width-1-1 width-1-3-lg">
                   <div class="card-feature">
                     <div class="card-feature__box-content-top card-feature__box-content-top_outer-position_left-deep">
-                      <figure class="card-feature__figure"><img class="card-feature__picture" src="../img/result.png" alt="result"></figure>
+                      <figure class="card-feature__figure"><img class="card-feature__picture" src="img/result.png" alt="result"></figure>
                     </div>
                     <div class="card-feature__box-content-bottom card-feature__box-content-bottom_outer-position_left-deep">
                       <p class="card-feature__title">Оплата по результату</p>
@@ -323,7 +323,7 @@
           <div class="container">
             <div class="section-step__wrap">
               <div class="section-step__box-figure">
-                <figure class="section-step__figure wow slideInLeft" data-wow-offset="350"><img class="section-step__picture" src="../img/book.png" alt="book"></figure>
+                <figure class="section-step__figure wow slideInLeft" data-wow-offset="350"><img class="section-step__picture" src="img/book.png" alt="book"></figure>
               </div>
             </div>
             <div class="section-step__box-text">
@@ -333,42 +333,42 @@
               <div class="grid">
                 <div class="grid__item width-1-2 width-1-4-lg">
                   <div class="card-infographics card-infographics_outer-position_right card-infographics_outer-position_lower">
-                    <figure class="card-infographics__figure card-infographics__figure_outer-position-figure_1"><img class="card-infographics__picture" src="../img/infographic-search-doc.png" alt="search doc"></figure>
+                    <figure class="card-infographics__figure card-infographics__figure_outer-position-figure_1"><img class="card-infographics__picture" src="img/infographic-search-doc.png" alt="search doc"></figure>
                   </div>
                 </div>
                 <div class="grid__item width-1-2 width-1-4-lg">
                   <div class="card-infographics card-infographics_outer-position_left card-infographics_outer-position_lower">
-                    <figure class="card-infographics__figure card-infographics__figure_outer-position-figure_2"><img class="card-infographics__picture" src="../img/infographic-doc.png" alt="doc"></figure>
+                    <figure class="card-infographics__figure card-infographics__figure_outer-position-figure_2"><img class="card-infographics__picture" src="img/infographic-doc.png" alt="doc"></figure>
                   </div>
                 </div>
                 <div class="grid__item width-1-2 width-1-4-lg">
                   <div class="card-infographics card-infographics_outer-position_right card-infographics_outer-position_lower">
-                    <figure class="card-infographics__figure card-infographics__figure_outer-position-figure_3 card-infographics__figure_size_small"><img class="card-infographics__picture" src="../img/infographic-libra.png" alt="libra"></figure>
+                    <figure class="card-infographics__figure card-infographics__figure_outer-position-figure_3 card-infographics__figure_size_small"><img class="card-infographics__picture" src="img/infographic-libra.png" alt="libra"></figure>
                   </div>
                 </div>
                 <div class="grid__item width-1-2 width-1-4-lg">
                   <div class="card-infographics card-infographics_outer-position_left card-infographics_outer-position_lower">
-                    <figure class="card-infographics__figure card-infographics__figure_outer-position-figure_4"><img class="card-infographics__picture" src="../img/infographic-book.png" alt="book"></figure>
+                    <figure class="card-infographics__figure card-infographics__figure_outer-position-figure_4"><img class="card-infographics__picture" src="img/infographic-book.png" alt="book"></figure>
                   </div>
                 </div>
                 <div class="grid__item width-1-2 width-1-4-lg">
                   <div class="card-infographics card-infographics_outer-position_right">
-                    <figure class="card-infographics__figure card-infographics__figure_outer-position-figure_5 card-infographics__figure_size_medium"><img class="card-infographics__picture" src="../img/infographic-man.png" alt="man"></figure>
+                    <figure class="card-infographics__figure card-infographics__figure_outer-position-figure_5 card-infographics__figure_size_medium"><img class="card-infographics__picture" src="img/infographic-man.png" alt="man"></figure>
                   </div>
                 </div>
                 <div class="grid__item width-1-2 width-1-4-lg">
                   <div class="card-infographics card-infographics_outer-position_left">
-                    <figure class="card-infographics__figure card-infographics__figure_outer-position-figure_6"><img class="card-infographics__picture" src="../img/infographic-calc.png" alt="calc"></figure>
+                    <figure class="card-infographics__figure card-infographics__figure_outer-position-figure_6"><img class="card-infographics__picture" src="img/infographic-calc.png" alt="calc"></figure>
                   </div>
                 </div>
                 <div class="grid__item width-1-2 width-1-4-lg">
                   <div class="card-infographics card-infographics_outer-position_right">
-                    <figure class="card-infographics__figure card-infographics__figure_outer-position-figure_7 card-infographics__figure_size_medium"><img class="card-infographics__picture" src="../img/infographic-money.png" alt="money"></figure>
+                    <figure class="card-infographics__figure card-infographics__figure_outer-position-figure_7 card-infographics__figure_size_medium"><img class="card-infographics__picture" src="img/infographic-money.png" alt="money"></figure>
                   </div>
                 </div>
                 <div class="grid__item width-1-2 width-1-4-lg">
                   <div class="card-infographics card-infographics_outer-position_left">
-                    <figure class="card-infographics__figure card-infographics__figure_outer-position-figure_8"><img class="card-infographics__picture" src="../img/infographic-result.png" alt="result"></figure>
+                    <figure class="card-infographics__figure card-infographics__figure_outer-position-figure_8"><img class="card-infographics__picture" src="img/infographic-result.png" alt="result"></figure>
                   </div>
                 </div>
               </div>
@@ -452,6 +452,64 @@
             </div>
           </div>
         </section>
+        <section class="section section-work">
+          <div class="container">
+            <div class="section-work__wrap">
+              <div class="section-work__box-figure">
+                <figure class="section-work__figure wow slideInRight" data-wow-offset="350"><img class="section-work__picture" src="img/coat-of-arms.png" alt="coat of arms"></figure>
+              </div>
+              <div class="section-work__box-text">
+                <h2 class="section-work__heading">Опыт работы? - Более 10&nbsp;лет!</h2><span class="section-work__subheading">Посмотрите наши успешные решения по делам:</span>
+              </div>
+              <div class="section-work__slider-work">
+                <div class="slider-work">
+                  <div class="swiper-container" id="swiperContainerSliderWork">
+                    <div class="swiper-wrapper slider-work__wrapper">
+                      <div class="swiper-slide slider-work__slide">
+                        <div class="slider-work__content"><a class="slider-work__link" href="docs/doc1.pdf" target="_blank">
+                            <figure class="slider-work__figure"><img class="slider-work__picture" src="img/doc1.png" alt="document"></figure>
+                            <div class="slider-work__overlay"></div></a></div>
+                      </div>
+                      <div class="swiper-slide slider-work__slide">
+                        <div class="slider-work__content"><a class="slider-work__link" href="docs/doc2.pdf" target="_blank">
+                            <figure class="slider-work__figure"><img class="slider-work__picture" src="img/doc2.png" alt="document"></figure>
+                            <div class="slider-work__overlay"></div></a></div>
+                      </div>
+                      <div class="swiper-slide slider-work__slide">
+                        <div class="slider-work__content"><a class="slider-work__link" href="docs/doc3.pdf" target="_blank">
+                            <figure class="slider-work__figure"><img class="slider-work__picture" src="img/doc3.png" alt="document"></figure>
+                            <div class="slider-work__overlay"></div></a></div>
+                      </div>
+                      <div class="swiper-slide slider-work__slide">
+                        <div class="slider-work__content"><a class="slider-work__link" href="docs/doc4.pdf" target="_blank">
+                            <figure class="slider-work__figure"><img class="slider-work__picture" src="img/doc4.png" alt="document"></figure>
+                            <div class="slider-work__overlay"></div></a></div>
+                      </div>
+                      <div class="swiper-slide slider-work__slide">
+                        <div class="slider-work__content"><a class="slider-work__link" href="docs/doc5.pdf" target="_blank">
+                            <figure class="slider-work__figure"><img class="slider-work__picture" src="img/doc5.png" alt="document"></figure>
+                            <div class="slider-work__overlay"></div></a></div>
+                      </div>
+                      <div class="swiper-slide slider-work__slide">
+                        <div class="slider-work__content"><a class="slider-work__link" href="docs/doc6.pdf" target="_blank">
+                            <figure class="slider-work__figure"><img class="slider-work__picture" src="img/doc6.png" alt="document"></figure>
+                            <div class="slider-work__overlay"></div></a></div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="slider-work__control-panel">
+                    <div class="button-arrow button-arrow_outer-position_right button-arrow_slim icon-arrow-right slider-work-button-next"></div>
+                    <div class="button-arrow button-arrow_outer-position_left button-arrow_slim icon-arrow-left slider-work-button-prev"></div>
+                  </div>
+                  <div class="slider-work__box-pagination">
+                    <div class="slider-work__pagination"></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="section section-work-test"></section>
       </main>
     </div>
     <script src="libs/libs-min.js"></script>
