Minor changes and ready section address

--- a/app/index.html
+++ b/app/index.html
@@ -542,6 +542,37 @@
             </div>
           </div>
         </section>
+        <section class="section section-address">
+          <div class="section-address__box-text">
+            <div class="section-address__contact"><span class="section-address__title">Вы можете найти нас по&nbsp;адресу:</span><span class="section-address__txt">г. Архангельск ул. Тимме, д. 77</span>
+              <div class="section-address__box-link"><a class="section-address__link" href="tel:88182635000"><span class="section-address__txt section-address__txt_big">+8 (818) 263-50-00</span></a></div>
+            </div>
+          </div>
+          <div class="section-address__box-map">
+            <div class="map" id="mapCity"></div>
+          </div>
+          <div class="section-address__box-form">
+            <form class="form-feedback" action="/" method="POST">
+              <div class="form-feedback__header"><span class="form-feedback__title"></span><span class="form-feedback__subtitle">Договориться о встрече на удобное для вас время:</span></div>
+              <div class="form-feedback__group">
+                <div class="form-feedback__box-field">
+                  <input class="form-feedback__field" type="tel" placeholder="Введите ваш телефон" autocomplete="off" maxlength="20">
+                </div>
+                <div class="form-feedback__box-button">
+                  <input class="button button_middle button_font" type="submit" value="Получить инструкцию">
+                </div>
+              </div>
+              <div class="form-feedback__footer">
+                <div class="form-feedback__box-inform"><span class="form-feedback__txt-inform">Мы перезвоним в течение 5 минут</span></div>
+                <div class="form-feedback__group">
+                  <div class="form-feedback__box-checkbox">
+                    <input class="form-feedback__checkbox" type="checkbox" checked required><span class="form-feedback__txt-checkbox">Согласен с&nbsp;<a class="form-feedback__link" href="#" target="_blank">обработкой персональных данных</a></span>
+                  </div>
+                </div>
+              </div>
+            </form>
+          </div>
+        </section>
       </main>
     </div>
     <script src="libs/libs-min.js"></script>
