--- a/app/index.html
+++ b/app/index.html
@@ -574,6 +574,25 @@
           </div>
         </section>
       </main>
+      <footer class="footer">
+        <div class="container">
+          <div class="footer__box-content">
+            <div class="grid">
+              <div class="grid__item grid__item_md-indent-inner width-1-1 width-1-3-md">
+                <div class="footer__box-link footer__box-link_position-inner_left footer__box-link_position-outer_left"><a class="footer__link ban-link" href="#" target="_blank"><span class="footer__txt footer__txt_font footer__txt_small">Реквизиты</span></a></div>
+              </div>
+              <div class="grid__item grid__item_md-indent-inner width-1-1 width-1-3-md">
+                <div class="footer__box-logo footer__box-logo_position-inner_left">
+                  <div class="logo"><a class="logo__link" href="/"><span class="logo__icon icon-logo-agency"></span><span class="logo__box-text"><span class="logo__txt">Агентство</span><span class="logo__txt">по банкротству</span></span></a></div>
+                </div>
+              </div>
+              <div class="grid__item grid__item_md-indent-inner width-1-1 width-1-3-md">
+                <div class="footer__box-link footer__box-link_position-inner_right footer__box-link_position-outer_right"><a class="footer__link" href="tel:88182635000"><span class="footer__txt">+8 (818) 263-50-00</span></a></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </footer>
     </div>
     <script src="libs/libs-min.js"></script>
     <script src="js/common-min.js"></script>
