--- a/app/index.html
+++ b/app/index.html
@@ -61,7 +61,7 @@
                       <div class="form-feedback__box-inform"><span class="form-feedback__txt-inform">Мы перезвоним в течение 5 минут</span></div>
                       <div class="form-feedback__group">
                         <div class="form-feedback__box-checkbox">
-                          <input class="form-feedback__checkbox" type="checkbox" checked required><span class="form-feedback__txt-checkbox">Согласен с&nbsp;<a class="form-feedback__link" href="#" target="_blank">обработкой персональных данных</a></span>
+                          <input class="form-feedback__checkbox" type="checkbox" checked required><span class="form-feedback__txt-checkbox">Согласен с&nbsp;<a class="form-feedback__link" href="policy/policy.pdf" target="_blank">обработкой персональных данных</a></span>
                         </div>
                       </div>
                     </div>
@@ -173,7 +173,7 @@
                         <div class="form-feedback__box-inform"><span class="form-feedback__txt-inform">Мы перезвоним в течение 5 минут</span></div>
                         <div class="form-feedback__group">
                           <div class="form-feedback__box-checkbox">
-                            <input class="form-feedback__checkbox" type="checkbox" checked required><span class="form-feedback__txt-checkbox">Согласен с&nbsp;<a class="form-feedback__link" href="#" target="_blank">обработкой персональных данных</a></span>
+                            <input class="form-feedback__checkbox" type="checkbox" checked required><span class="form-feedback__txt-checkbox">Согласен с&nbsp;<a class="form-feedback__link" href="policy/policy.pdf" target="_blank">обработкой персональных данных</a></span>
                           </div>
                         </div>
                       </div>
@@ -261,7 +261,7 @@
                     <div class="form-feedback__box-inform"><span class="form-feedback__txt-inform">Мы перезвоним в течение 5 минут</span></div>
                     <div class="form-feedback__group">
                       <div class="form-feedback__box-checkbox">
-                        <input class="form-feedback__checkbox" type="checkbox" checked required><span class="form-feedback__txt-checkbox">Согласен с&nbsp;<a class="form-feedback__link" href="#" target="_blank">обработкой персональных данных</a></span>
+                        <input class="form-feedback__checkbox" type="checkbox" checked required><span class="form-feedback__txt-checkbox">Согласен с&nbsp;<a class="form-feedback__link" href="policy/policy.pdf" target="_blank">обработкой персональных данных</a></span>
                       </div>
                     </div>
                   </div>
@@ -530,7 +530,7 @@
                     <div class="form-feedback__box-inform"><span class="form-feedback__txt-inform">Мы перезвоним в течение 5 минут</span></div>
                     <div class="form-feedback__group">
                       <div class="form-feedback__box-checkbox">
-                        <input class="form-feedback__checkbox" type="checkbox" checked required><span class="form-feedback__txt-checkbox">Согласен с&nbsp;<a class="form-feedback__link" href="#" target="_blank">обработкой персональных данных</a></span>
+                        <input class="form-feedback__checkbox" type="checkbox" checked required><span class="form-feedback__txt-checkbox">Согласен с&nbsp;<a class="form-feedback__link" href="policy/policy.pdf" target="_blank">обработкой персональных данных</a></span>
                       </div>
                     </div>
                   </div>
@@ -566,7 +566,7 @@
                 <div class="form-feedback__box-inform"><span class="form-feedback__txt-inform">Мы перезвоним в течение 5 минут</span></div>
                 <div class="form-feedback__group">
                   <div class="form-feedback__box-checkbox">
-                    <input class="form-feedback__checkbox" type="checkbox" checked required><span class="form-feedback__txt-checkbox">Согласен с&nbsp;<a class="form-feedback__link" href="#" target="_blank">обработкой персональных данных</a></span>
+                    <input class="form-feedback__checkbox" type="checkbox" checked required><span class="form-feedback__txt-checkbox">Согласен с&nbsp;<a class="form-feedback__link" href="policy/policy.pdf" target="_blank">обработкой персональных данных</a></span>
                   </div>
                 </div>
               </div>
